<resources>

    <!-- Application -->
    <string name="app_name">GRA ID SDK</string>

    <!-- Config Activity -->
    <string name="activity_config_description">Getting OpenRoaming configuration…</string>

    <!-- Login Activity -->
    <string name="activity_login_welcome">Welcome!</string>
    <string name="activity_login_description">To enjoy seamless and secure WIFI, please login with your credentials</string>
    <string name="activity_login_request">Request Email Code</string>
    <string name="activity_login_configure">Configure 2FA</string>
    <string name="activity_login_continue">Login</string>
    <string name="activity_login_account">Don\'t have an Account?</string>
    <string name="activity_login_register">Create Account</string>

    <!-- Register Activity -->
    <string name="activity_register_description">Create your account to enjoy seamless and secure WIFI</string>
    <string name="activity_register_name_first">First Name</string>
    <string name="activity_register_name_last">Last Name</string>
    <string name="activity_register_continue">Register</string>
    <string name="activity_register_account">Already have an Account?</string>
    <string name="activity_register_login">Login</string>

    <!-- 2FA Activity -->
    <string name="activity_twofa_title">Two-Factor Authentication Configuration</string>
    <string name="activity_twofa_description_1">To enable 2FA on your account, you will need to access https://wifi.tetrapi.pt/login and login with your credentials:</string>
    <string name="activity_twofa_description_2">After logging into your account, click on \"Account Settings\":</string>
    <string name="activity_twofa_description_3">Click on \"Configure Two-Factor Authentication\" and proceed with your preferred method:</string>
    <string name="activity_twofa_open">Open Login Page</string>

    <!-- Legal Activity -->
    <string name="activity_legal_title">Agreements</string>
    <string name="activity_legal_terms">Terms and Conditions</string>
    <string name="activity_legal_privacy">Privacy Policy</string>
    <string name="activity_legal_accept">I accept the OpenRoaming Terms &amp; Conditions and Privay Policy</string>
    <string name="activity_legal_continue">Continue</string>

    <!-- Main Activity -->
    <string name="activity_main_actions">More Actions</string>
    <string name="activity_main_user">User Profile</string>
    <string name="activity_main_about">About</string>
    <string name="activity_main_logout">Logout</string>
    <string name="activity_main_usage">Usage</string>
    <string name="activity_main_not_found">No Profiles Found</string>
    <string name="activity_main_not_found_explanation">The networks you connect to through OpenRoaming will show up here once you join them</string>
    <string name="activity_main_connect">Connect to OpenRoaming</string>

    <!-- User Activity -->
    <string name="activity_user_version">Version %1$s</string>
    <string name="activity_user_obtaining">Obtaining user info…</string>
    <string name="activity_user_verified">User is verified</string>
    <string name="activity_user_created">User created on %1$s</string>

    <!-- About Activity -->
    <string name="activity_about_version">Version %1$s</string>
    <string name="activity_about_copyright">All contents are Copyright © 2025\nWireless Broadband Alliance. All rights reserved</string>
    <string name="activity_about_terms">Terms and Conditions</string>
    <string name="activity_about_privacy">Privacy Policy</string>

    <!-- Usage Fragment -->
    <string name="fragment_usage_nothing">Nothing here yet…</string>
    <string name="fragment_usage_networks">The networks you connect to through OpenRoaming will show up here once you join them.</string>
    <string name="fragment_usage_connect">Connect to OpenRoaming</string>

    <!-- Common -->
    <string name="common_placeholder">Placeholder</string>
    <string name="common_open_roaming">OpenRoaming</string>
    <string name="common_email">Email</string>
    <string name="common_password">Password</string>
    <string name="common_code">2FA code</string>
    <string name="common_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nCurabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi.\n\nSuspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Etiam varius dui nec nisi scelerisque, at ultrices metus eleifend. Sed accumsan turpis ut mi hendrerit, non aliquam libero varius. Maecenas vel libero posuere, malesuada eros in, gravida lorem. Morbi quis felis in lacus viverra pharetra. Integer at libero orci. Vivamus varius dolor non mauris bibendum, non aliquam lacus convallis. Cras tincidunt augue eget mauris bibendum, id venenatis magna dictum.\n\nPraesent feugiat dolor vitae fermentum hendrerit. Integer eget purus sed neque suscipit tempor. Aliquam erat volutpat. Nulla id justo sed metus lacinia fringilla sit amet a massa. Sed et felis lorem. Duis vel urna vitae odio hendrerit sagittis. Fusce sit amet consequat quam. Nulla facilisi. Etiam ut metus sapien. Sed in auctor velit, non laoreet eros. Donec ac ullamcorper lacus. Quisque non dictum purus. Duis tincidunt nisi nec libero ultrices, non aliquet arcu eleifend.</string>

</resources>