<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/material_margin_large">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".25" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="75dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/material_margin_mini"
                android:src="@drawable/img_tetrapi"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintEnd_toStartOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_open_roaming"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="@id/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_large"
            android:text="@string/activity_login_welcome"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin"
            android:hint="@string/common_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textAppearance="?textAppearanceBodyMedium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin"
            android:hint="@string/common_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="?textAppearanceBodyMedium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_first_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin"
            android:hint="@string/activity_register_name_first">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_first_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textAppearance="?textAppearanceBodyMedium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_last_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin"
            android:hint="@string/activity_register_name_last">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_last_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textAppearance="?textAppearanceBodyMedium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.tetrapi.or.views.StateMaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin"
            android:backgroundTint="?colorSecondary"
            android:text="@string/activity_register_continue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_mini"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/terms_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="@dimen/material_margin_mini"
                android:paddingEnd="@dimen/material_margin_mini"
                android:text="@string/activity_register_terms" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/privacy_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/privacy_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="@dimen/material_margin_mini"
                android:paddingEnd="@dimen/material_margin_mini"
                android:text="@string/activity_register_privacy" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_mini" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin"
            android:gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_register_account" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_mini"
                android:text="@string/activity_register_login"
                android:textColor="?colorSecondary"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>