<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimaryDark"
        app:menu="@menu/menu_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_tetrapi"
                app:tint="?colorPrimary" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/material_margin_mini"
                android:src="@drawable/ic_or"
                app:tint="?colorPrimary" />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/material_margin_large">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_wifi"
                android:drawablePadding="@dimen/material_margin_mini"
                android:gravity="center"
                android:text="@string/activity_main_usage"
                android:textAppearance="?textAppearanceLabelLarge"
                android:textStyle="bold" />

            <com.tetrapi.or.views.StateMaterialButton
                android:id="@+id/connect_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin"
                android:backgroundTint="?colorSecondary"
                android:text="@string/activity_main_connect" />

            <ViewAnimator
                android:id="@+id/view_animator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/material_margin"
                android:inAnimation="@anim/pull_right"
                android:measureAllChildren="false"
                android:outAnimation="@anim/push_right">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/color_outline"
                    app:cardCornerRadius="8dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/material_margin_large">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:src="@drawable/ic_warning" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/material_margin_mini"
                            android:gravity="center_horizontal"
                            android:text="@string/activity_main_not_found"
                            android:textAppearance="?textAppearanceTitleMedium"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/material_margin_mini"
                            android:gravity="center_horizontal"
                            android:text="@string/activity_main_not_found_explanation"
                            android:textAppearance="?textAppearanceLabelMedium" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </ViewAnimator>

        </LinearLayout>

    </ScrollView>

</LinearLayout>